--- a/Georgian.Employee.ResponsiveUI/ResponsiveUI/ResponsiveUI.csproj
+++ b/Georgian.Employee.ResponsiveUI/ResponsiveUI/ResponsiveUI.csproj
@@ -107,6 +107,7 @@
     <Content Include="GcResponsive\GC-Responsive-UI.js" />
     <Content Include="GcResponsive\GC_responsive_ui.css" />
     <Content Include="css\georgianicon.css" />
+    <Content Include="javascript\GC_Branding.js" />
     <Content Include="redirecthomepage.js" />
     <Content Include="Scripts\Announcements.js" />
     <Content Include="Scripts\linkify-jquery.min.js" />
