removing errors in release mode

--- a/Georgian.Employee.ResponsiveUI/ResponsiveUI/bundleconfig.json
+++ b/Georgian.Employee.ResponsiveUI/ResponsiveUI/bundleconfig.json
@@ -6,7 +6,16 @@
       "javascript\\delayLoadImages.js",
       "javascript\\georgianfeedback.js",
       "javascript\\checkeditmode.js",
-      "javascript\\georgianuserprofileproperties.js"
+      "javascript\\georgianuserprofileproperties.js",
+      "EmergencyBroadcast\\EmergencyBroadcast.js",
+      "SummaryLinks\\summarylinks.js",
+      "javascript\\georgian_sharepoint_chrome.js",
+      "javascript\\resize_app_part.js",
+      "javascript\\hide_app_part.js",
+      "CampusSelection\\campusSelection.js"
+
+
+
     ]
   },
   {
@@ -15,7 +24,9 @@
       "GcResponsive\\GC_responsive_ui.css",
       "SummaryLinks\\summarylinks.css",
       "css\\georgianicon.css",
-      "css\\georgianbrand2016.css"
+      "css\\georgianbrand2016.css",
+      "EmergencyBroadcast\\EmergencyBroadcast.css",
+      "CampusSelection\\campusSelection.css"
     ]
   }
 ]
