--- a/.gitignore
+++ b/.gitignore
@@ -288,3 +288,9 @@ Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/Scripts/angular*
 Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/Scripts/jquery*
 /Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.min.css
 /Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.min.js
+
+Georgian\.Employee\.ResponsiveUI/ResponsiveUI/GC-Responsive-UI\.min\.js
+
+Georgian\.Employee\.ResponsiveUI/ResponsiveUI/bundle\.css
+
+Georgian\.Employee\.ResponsiveUI/ResponsiveUI/bundle\.js
