add gc_branding_prod reference

--- a/.gitignore
+++ b/.gitignore
@@ -288,3 +288,5 @@ Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/Scripts/angular*
 Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/Scripts/jquery*
 /Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.min.css
 /Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.min.js
+/Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.css
+/Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.js
