Add css per Monika's request Add image file from old Employee Portal to project Modify the xml files to copy the new image file to the server. Resolve #14, Resolve #15

--- a/Georgian.Employee.ResponsiveUI/ResponsiveUI/ResponsiveUI.csproj
+++ b/Georgian.Employee.ResponsiveUI/ResponsiveUI/ResponsiveUI.csproj
@@ -104,6 +104,7 @@
     <Content Include="Content\fabric.min.css" />
     <Content Include="Content\fabric.rtl.css" />
     <Content Include="Content\fabric.rtl.min.css" />
+    <Content Include="images\warning-36.png" />
     <Content Include="javascript\checkeditmode.js" />
     <Content Include="CampusSelection\campusSelection.css" />
     <Content Include="javascript\delayLoadImages.js" />
