--- a/Georgian.Employee.ResponsiveUI/ResponsiveUI/ResponsiveUI.csproj
+++ b/Georgian.Employee.ResponsiveUI/ResponsiveUI/ResponsiveUI.csproj
@@ -105,6 +105,7 @@
     <Content Include="Content\fabric.rtl.css" />
     <Content Include="Content\fabric.rtl.min.css" />
     <Content Include="images\warning-36.png" />
+    <Content Include="images\warning.svg" />
     <Content Include="javascript\checkeditmode.js" />
     <Content Include="CampusSelection\campusSelection.css" />
     <Content Include="javascript\delayLoadImages.js" />
