--- a/.gitignore
+++ b/.gitignore
@@ -279,10 +279,23 @@ Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/bundle.min.*
 
 #responsive files
 Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/Content/sass/
+Georgian.Employee.ResponsiveUI/ResponsiveUI/Content/sass/
 Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/Content/fabric*
+Georgian.Employee.ResponsiveUI/ResponsiveUI/Content/fabric*
 
 #angular files
 Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/Scripts/angular*
 
 #jquery
 Georgian.StudentPortal.ResponsiveUI/ResponsiveUI/Scripts/jquery*
+Georgian.Employee.ResponsiveUI/ResponsiveUI/Scripts/jquery*
+/Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.min.css
+/Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.min.js
+/Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.css
+/Georgian.Employee.ResponsiveUI/ResponsiveUI/bundle.js
+
+Georgian\.Employee\.ResponsiveUI/ResponsiveUI/GC-Responsive-UI\.min\.js
+
+Georgian\.Employee\.ResponsiveUI/ResponsiveUI/bundle\.css
+
+Georgian\.Employee\.ResponsiveUI/ResponsiveUI/bundle\.js
